Updating codebase against the new core version